saving commit for initial app with angular material2 configuration set up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
 <h1>
   {{title}}
 </h1>
+
+ <div>
+    <a md-button color="primary">Flat button</a>
+    <a md-raised-button color="accent">Raised button</a>
+    <a md-fab color="primary"><md-icon>check</md-icon></a>
+    <a md-mini-fab color="primary"><md-icon>check</md-icon></a>
+  </div>
+  
